Adjusted for spain regions

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,6 +17,12 @@ jobs:
           find: "override_cache=deploy_version"
           replace: "override_cache=${{ github.run_id }}"
           include: "**index.html" 
+      - name: Override js and css caches in constants
+        uses: jacobtomlinson/gha-find-replace@v2
+        with:
+          find: "override_cache=deploy_version"
+          replace: "override_cache=${{ github.run_id }}"
+          include: "**constants.js"
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
